--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -56,6 +56,10 @@ body {
 }
 
 @media print {
+  .page-size {
+    width: 794px;
+    height: 1123px;
+}
   .bg-dark {
     // background-color: #f4f4f4 !important;
     -webkit-print-color-adjust: exact;
