--- a/src/app/pages/properties/components/main/main.component.html
+++ b/src/app/pages/properties/components/main/main.component.html
@@ -38,12 +38,16 @@
               <input class="form-check-input" type="checkbox" id="inlineCheckbox1" formControlName="addKFLogo">
               <label class="form-check-label" for="inlineCheckbox1">Show KF logo</label>
             </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="inlineCheckbox2" formControlName="addContactPage">
-              <label class="form-check-label" for="inlineCheckbox2">Add Contact Page</label>
-            </div>
+            
 
           </div>
+        </div>
+        <div>
+          <label class="fw-bold m-0">Broker Details</label>
+          <span class="col hstack flex-grow-1">
+            <app-input-radio [classList]="'font-12'" formControlName="brokderDetails" [name]="'value.id'"
+              [options]="brokerOptions" [label]="'Broker Details'" />
+          </span>
         </div>
         <span class=" hstack gap-2 align-self-end pb-s">
           <app-button [label]="'Calculate'" [classList]="'btn-primary'" [icon]="'fa-solid fa-plus'"
