payment plan options added

--- a/src/app/pages/properties/components/page-2/page-2.component.html
+++ b/src/app/pages/properties/components/page-2/page-2.component.html
@@ -60,62 +60,29 @@
         <!-- <div class="mb-2 col-md-6 hstack justify-content-between">60/10/30 Post-Handover-2 YEAR PAYMENT PLAN: <p class="text-end mb-0">{{selectedProperty()?.year_payment}}</p></div> -->
     </div>
 
-    <div class="bordered-box mb-4">
-        <div class="section-title">PAYMENT PLAN - 50/50</div>
-        <div class="d-flex justify-content-between gap-1 align-item-center">
-            <span class="bg-dark fw-bold flex-grow-1 p-2"><strong>Selling Price:</strong> {{selectedProperty()?.full_payment_one }}</span>
-            <span class="bg-dark fw-bold flex-grow-1 p-2"><strong>Admin Fee:</strong> AED {{2000}}</span>
-            <span class="bg-dark fw-bold flex-grow-1 p-2">
-                <strong>ADM fee 2%:</strong> {{selectedProperty()?.full_payment_table}}
-                <p class="mb-0 hint-text fw-lighter">*To be paid with booking fee</p>
-            </span>
-        </div>
-
-        <table class="table table-bordered border-black mt-2">
-            <thead>
-            <tr>
-                <th>Description</th>
-                <th>Date</th>
-                <th>Percentage</th>
-                <th>Amount (AED)</th>
-            </tr>
-            </thead>
-            <tbody>
-                @for (item of installmentsPlan()?.option1; track $index) {
+    @if (selectedPricingPlan() === 'fifty') {
+        <div class="bordered-box mb-4">
+            <div class="section-title">PAYMENT PLAN - 50/50</div>
+            <div class="d-flex justify-content-between gap-1 align-item-center">
+                <span class="bg-dark fw-bold flex-grow-1 p-2"><strong>Selling Price:</strong> {{selectedProperty()?.full_payment_one }}</span>
+                <span class="bg-dark fw-bold flex-grow-1 p-2"><strong>Admin Fee:</strong> AED {{2000}}</span>
+                <span class="bg-dark fw-bold flex-grow-1 p-2">
+                    <strong>ADM fee 2%:</strong> {{selectedProperty()?.full_payment_table}}
+                    <p class="mb-0 hint-text fw-lighter">*To be paid with booking fee</p>
+                </span>
+            </div>
+    
+            <table class="table table-bordered border-black mt-2">
+                <thead>
                 <tr>
-                    <td>{{item.label}}</td>
-                    <td>{{item.date }}</td>
-                    <td>{{item.percentage}}</td>
-                    <td>{{item.amount}}</td>
+                    <th>Description</th>
+                    <th>Date</th>
+                    <th>Percentage</th>
+                    <th>Amount (AED)</th>
                 </tr>
-                
-                }
-            </tbody>
-        </table>
-    </div>
-
-    <div class="bordered-box mb-4">
-        <div class="section-title">PAYMENT PLAN - 70/30 PH</div>
-        <div class="d-flex justify-content-between gap-1 align-item-center">
-            <span class="bg-dark fw-bold flex-grow-1 p-2"><strong>Selling Price:</strong> {{selectedProperty()?.year_payment_one }}</span>
-            <span class="bg-dark fw-bold flex-grow-1 p-2"><strong>Admin Fee:</strong> AED {{2000 }}</span>
-            <span class="bg-dark fw-bold flex-grow-1 p-2">
-                <strong>ADM fee 2%:</strong> {{selectedProperty()?.year_payment_table}}
-                <p class="mb-0 hint-text fw-lighter">*To be paid with booking fee</p>
-            </span>
-        </div>
-
-        <table class="table table-bordered border-black mt-2">
-            <thead>
-            <tr>
-                <th>Description</th>
-                <th>Date</th>
-                <th>Percentage</th>
-                <th>Amount (AED)</th>
-            </tr>
-            </thead>
-            <tbody>
-                @for (item of installmentsPlan()?.option2; track $index) {
+                </thead>
+                <tbody>
+                    @for (item of installmentsPlan()?.option1; track $index) {
                     <tr>
                         <td>{{item.label}}</td>
                         <td>{{item.date }}</td>
@@ -124,9 +91,46 @@
                     </tr>
                     
                     }
-            </tbody>
-        </table>
-    </div>
+                </tbody>
+            </table>
+        </div>
+    }
+
+    @if (selectedPricingPlan() === 'seventy') {
+        <div class="bordered-box mb-4">
+            <div class="section-title">PAYMENT PLAN - 70/30 PH</div>
+            <div class="d-flex justify-content-between gap-1 align-item-center">
+                <span class="bg-dark fw-bold flex-grow-1 p-2"><strong>Selling Price:</strong> {{selectedProperty()?.year_payment_one }}</span>
+                <span class="bg-dark fw-bold flex-grow-1 p-2"><strong>Admin Fee:</strong> AED {{2000 }}</span>
+                <span class="bg-dark fw-bold flex-grow-1 p-2">
+                    <strong>ADM fee 2%:</strong> {{selectedProperty()?.year_payment_table}}
+                    <p class="mb-0 hint-text fw-lighter">*To be paid with booking fee</p>
+                </span>
+            </div>
+    
+            <table class="table table-bordered border-black mt-2">
+                <thead>
+                <tr>
+                    <th>Description</th>
+                    <th>Date</th>
+                    <th>Percentage</th>
+                    <th>Amount (AED)</th>
+                </tr>
+                </thead>
+                <tbody>
+                    @for (item of installmentsPlan()?.option2; track $index) {
+                        <tr>
+                            <td>{{item.label}}</td>
+                            <td>{{item.date }}</td>
+                            <td>{{item.percentage}}</td>
+                            <td>{{item.amount}}</td>
+                        </tr>
+                        
+                        }
+                </tbody>
+            </table>
+        </div>
+    }
 
     <p class="note-text fst-italic text-center print-only">
         Note: Please note this payment plan is provided for your information only and is not an obligation or commitment by Imkan.
