--- a/src/app/pages/properties/components/main/main.component.html
+++ b/src/app/pages/properties/components/main/main.component.html
@@ -38,7 +38,7 @@
               <input class="form-check-input" type="checkbox" id="inlineCheckbox1" formControlName="addKFLogo">
               <label class="form-check-label" for="inlineCheckbox1">Show KF logo</label>
             </div>
-            
+
 
           </div>
         </div>
@@ -49,24 +49,33 @@
               [options]="brokerOptions" [label]="'Broker Details'" />
           </span>
         </div>
+        <div>
+          <label class="fw-bold m-0">Payment Plan</label>
+          <span class="col hstack flex-grow-1">
+            <app-input-radio [classList]="'font-12'" formControlName="pricingDetails" [name]="'value.ids'"
+              [options]="pricingOptions" [label]="'Payment Plan'" (inputChange)="onPlanChange($event)" />
+          </span>
+        </div>
         <span class=" hstack gap-2 align-self-end pb-s">
           <app-button [label]="'Calculate'" [classList]="'btn-primary'" [icon]="'fa-solid fa-plus'"
             (onClick)="onSubmit()" [disabled]="!templateForm.valid || isLoading" />
-          <app-button [label]="'Download'" [classList]="'btn-outline-danger'" [disabled]="!templateForm.valid || isLoading"
-            [icon]="'fa-solid fa-plus'" [icon]="'bi bi-printer'" [showSpinner]="isLoading" (onClick)="openPrint()" />
+          <app-button [label]="'Download'" [classList]="'btn-outline-danger'"
+            [disabled]="!templateForm.valid || isLoading" [icon]="'fa-solid fa-plus'" [icon]="'bi bi-printer'"
+            [showSpinner]="isLoading" (onClick)="openPrint()" />
         </span>
-        
+
       </form>
     </div>
 
 
-    <div class="px-5 mt-5 noprint d-flex flex-column justify-content-center align-items-center" >
+    <div class="px-5 mt-5 noprint d-flex flex-column justify-content-center align-items-center">
       <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav nav-pills nav-justified px-3 py-3 gap-2 shadow w-75">
         <li [ngbNavItem]="1" class="nav-item">
           <button ngbNavLink class="nav-link ">Details Page</button>
           <ng-template ngbNavContent>
             <div class="d-flex justify-content-center">
-              <app-page-2 [selectedProperty]="selectedProperty" [installmentsPlan]="installmentsPlan" />
+              <app-page-2 [selectedProperty]="selectedProperty" [installmentsPlan]="installmentsPlan"
+                [selectedPricingPlan]="selectedPricingPlan" />
             </div>
           </ng-template>
         </li>
@@ -74,10 +83,10 @@
           <button ngbNavLink class="nav-link  ">Property Images</button>
           <ng-template ngbNavContent>
             @for (item of selectedProperty?.imgUrl; track $index) {
-              <div class="d-flex justify-content-center">
-                  <app-page-3 [imgUrl]="item" [isApartment]="selectedProperty?.isAppartment"/>
-              </div>
-              }
+            <div class="d-flex justify-content-center">
+              <app-page-3 [imgUrl]="item" [isApartment]="selectedProperty?.isAppartment" />
+            </div>
+            }
           </ng-template>
         </li>
       </ul>
@@ -86,5 +95,5 @@
 
   </div>
 
-  <app-print-view [selectedProperty]="selectedProperty" [installmentsPlan]="installmentsPlan" class="print-only "/>
+  <!-- <app-print-view [selectedProperty]="selectedProperty" [installmentsPlan]="installmentsPlan" class="print-only "/> -->
 </main>
